WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
213314
REGRESSION (
r258092
): fast/forms/ios/file-upload-panel.html fails when HAVE(UICONTEXTMENU_LOCATION)
https://bugs.webkit.org/show_bug.cgi?id=213314
Summary
REGRESSION (r258092): fast/forms/ios/file-upload-panel.html fails when HAVE(U...
Andy Estes
Reported
2020-06-17 13:18:56 PDT
REGRESSION (
r258092
): fast/forms/ios/file-upload-panel.html fails when HAVE(UICONTEXTMENU_LOCATION)
Attachments
Patch
(6.14 KB, patch)
2020-06-17 15:05 PDT
,
Andy Estes
no flags
Details
Formatted Diff
Diff
Patch
(4.48 KB, patch)
2020-06-17 18:20 PDT
,
Andy Estes
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Andy Estes
Comment 1
2020-06-17 13:19:48 PDT
rdar://problem/60339129
Andy Estes
Comment 2
2020-06-17 15:05:27 PDT
Created
attachment 402157
[details]
Patch
Maciej Stachowiak
Comment 3
2020-06-17 15:37:45 PDT
Comment on
attachment 402157
[details]
Patch r=me The dead code removal should probably be a separate patch but fine either way.
Andy Estes
Comment 4
2020-06-17 18:20:51 PDT
Created
attachment 402175
[details]
Patch
EWS
Comment 5
2020-06-17 18:45:06 PDT
Committed
r263194
: <
https://trac.webkit.org/changeset/263194
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 402175
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug